feat(form) Language & course typeahead updated title

--- a/blocks/form/components/language/_language.json
+++ b/blocks/form/components/language/_language.json
@@ -1,7 +1,7 @@
 {
     "definitions": [
         {
-            "title": "Language",
+            "title": "Language Typeahead",
             "id": "language",
             "plugins": {
                 "xwalk": {
